--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,7 @@
  *
  *= require_tree .
  *= require_self
+ *= require main
+ *= require bootstrap_and_overrides
+ *= require rails_bootstrap_forms
  */
