--- a/app/views/donators/new.html.haml
+++ b/app/views/donators/new.html.haml
@@ -7,5 +7,11 @@
         = f.text_field :name
       %li
         = f.text_field :email
+      = f.fields_for :address_attributes do |a|
+        #{a.text_field :street}
+        #{a.text_field :house_number}
+        #{a.text_field :city}
+        #{a.text_field :plz}
+        #{a.text_field :phone}
       %li
         = f.submit "Spende einstellen", class: "btn btn-success"
