--- a/app/views/donators/new.html.haml
+++ b/app/views/donators/new.html.haml
@@ -13,5 +13,9 @@
         #{a.text_field :city}
         #{a.text_field :plz}
         #{a.text_field :phone}
+      = f.fields_for 'donations_attributes[]', @donation do |d|
+        #{d.text_field :food}
+        #{d.number_field :amount}
+        #{d.text_field :unit}
       %li
         = f.submit "Spende einstellen", class: "btn btn-success"
