--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -12,3 +12,11 @@ h1 {
     list-style: none;
   }
 }
+
+// Donations overview
+.donations {
+background-color: #d4f2ca;
+  li {
+    list-style: none;
+  }
+}
