--- a/app/views/donations/index.html.haml
+++ b/app/views/donations/index.html.haml
@@ -1,9 +1,11 @@
-%h1 Übersicht Donations
-%p Hello #{@donator.name}
-%p Donations:
-%ul
-- @donations.each do |d|
-  %p Donation #{d.id}
-  %li= d.food
-  %li= d.amount
-  %li= d.unit
+.donations-overview
+  %h1 Übersicht Donations
+  %p Hello #{@donator.name}
+  %p Donations:
+  %ul
+  - @donations.each do |d|
+    %p Donation #{d.id}
+    %li= d.food
+    %li= d.amount
+    %li= d.unit
+    %li= link_to 'single donation', donation_path(d.id)
