--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,4 +9,5 @@
   %body
     - flash.each do |key, value|
       = content_tag :div, value, class: "flash #{key}"
+    = render '/sessions/navbar'
     = yield
