--- a/app/views/transporters/index.html.haml
+++ b/app/views/transporters/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Übersicht alle Regestrierten Transporter
+%h1 Übersicht aller registrierten Transporter
 
 - @transporter.each do |t|
   - if current_user.is_admin?
