--- a/app/views/user_mailer/activation_needed_email.html.haml
+++ b/app/views/user_mailer/activation_needed_email.html.haml
@@ -1,5 +1,5 @@
-Es wurde für sie ein Account bei der Tafel
-= @tafel.name
+Es wurde für sie ein Account bei der Organisation
+= @organization.name
 angelegt
 %br/
 Ihr Daten sind folgende:
