--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,11 +1,9 @@
-= render '/sessions/logout'
-= link_to 'Spendenübersicht', donators_path
-%h1 Alle Mitarbeiter deiner Tafel
+%h1 Alle Mitarbeiter deiner Organisation
 - if current_user.is_admin?
   = link_to "Neuen Mitarbeiter erstellen", new_user_path
   = link_to "Neues Transportunternehmen hinzufügen", new_transporter_path
-  = link_to "Neue Tafel erstellen", new_tafel_path
-  = link_to "Alle Tafeln anzeigen", tafels_path
+  = link_to "Neue Organisation erstellen", new_organization_path
+  = link_to "Alle Organisationen anzeigen", organizations_path
   = link_to "Alle Transportunternehmen", transporters_path
 - @user.each do |u|
   - if current_user.is_admin?
@@ -14,7 +12,7 @@
     %h3 Email:
     = u.email
     %br/
-    = link_to "Mitarbieter bearbeiten", edit_user_path(u)
+    = link_to "Mitarbeiter bearbeiten", edit_user_path(u)
 
   - else
     %h3 Name:
