--- a/app/views/organizations/new.html.haml
+++ b/app/views/organizations/new.html.haml
@@ -1,16 +1,16 @@
-%h1 Transportunternehmen bearbeiten
-.transporter-form
-  = bootstrap_form_for @transporter do |f|
+%h1 Neue Organisation hinzufügen
+.organization-form
+  = bootstrap_form_for @organisation do |f|
     %ul
       %li
         = f.text_field :name
       %li
         = f.email_field :email
-      = f.fields_for :address_attributes, @address do |a|
+      = f.fields_for :address_attributes do |a|
         #{a.text_field :street}
         #{a.text_field :house_number}
         #{a.text_field :city}
         #{a.text_field :plz}
         #{a.text_field :phone}
       %li
-      = f.submit 'Erstellen'
+        = f.submit 'Erstellen'
