--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -3,4 +3,4 @@
 
 .links
   %div= link_to 'Für Spender', new_donator_path
-  %div= link_to 'Für Tafeln', new_session_path
+  %div= link_to 'Für Organisationen', new_session_path
