--- a/app/views/transporters/new.html.haml
+++ b/app/views/transporters/new.html.haml
@@ -1,15 +1,16 @@
 %h1 Neues Transportunternehmen hinzufügen
-= bootstrap_form_for @transporter do |f|
-  %ul
-    %li
-      = f.text_field :name
-    %li
-      = f.email_field :email
-    = f.fields_for :address_attributes do |a|
-      #{a.text_field :street}
-      #{a.text_field :house_number}
-      #{a.text_field :city}
-      #{a.text_field :plz}
-      #{a.text_field :phone}
-    %li
-      = f.submit 'Erstellen'
+.transporter-form
+  = bootstrap_form_for @transporter do |f|
+    %ul
+      %li
+        = f.text_field :name
+      %li
+        = f.email_field :email
+      = f.fields_for :address_attributes do |a|
+        #{a.text_field :street}
+        #{a.text_field :house_number}
+        #{a.text_field :city}
+        #{a.text_field :plz}
+        #{a.text_field :phone}
+      %li
+        = f.submit 'Erstellen'
