--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,4 +1,3 @@
-= render '/sessions/logout'
 %h1 Mitarbeiter bearbeiten
 
 -#- if current_user.is_admin?
@@ -9,7 +8,7 @@
     = f.email_field :email
     = f.label :admin
     = f.check_box :admin
-    = f.collection_radio_buttons(:tafel_id, Tafel.all, :id, :name)
+    = f.collection_radio_buttons(:organization_id, Organization.all, :id, :name)
     = f.submit 'Bearbeiten'
 -#- else
   = form_for @user do |f|
