--- a/app/views/donators/new.html.haml
+++ b/app/views/donators/new.html.haml
@@ -17,5 +17,6 @@
         #{d.text_field :food}
         #{d.number_field :amount}
         #{d.text_field :unit}
+        #{d.text_field :expiry_date}
       %li
         = f.submit "Spende einstellen", class: "btn btn-success"
