--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,4 +1,4 @@
-= render '/sessions/logout'
+-# = render '/sessions/logout'
 %h1 Neuen Mitarbeiter erstellen
 = form_for @user do |f|
   = f.label :name
