--- a/app/views/organizations/new.html.haml
+++ b/app/views/organizations/new.html.haml
@@ -1,6 +1,6 @@
 %h1 Neue Organisation hinzufügen
 .organization-form
-  = bootstrap_form_for @organisation do |f|
+  = bootstrap_form_for @organization do |f|
     %ul
       %li
         = f.text_field :name
