implement email login donator

--- a/app/views/donators/new.html.haml
+++ b/app/views/donators/new.html.haml
@@ -1,5 +1,7 @@
 .donator-header
   %h1 Spender
+Waren sie bereits früher schon einmal spender?
+= link_to "Dann hier Klicken", login_url
 .donator-form
   = bootstrap_form_for @donator do |f|
     %ul
