--- a/app/views/donations/show.html.haml
+++ b/app/views/donations/show.html.haml
@@ -23,7 +23,7 @@
       = f.submit 'bearbeiten'
 
   - if current_user.present? && current_user.admin?
-    =button_to 'Anfordern', delivery_donation_path, data: { confirm: 'Sicher?' }
+    =button_to 'Anfordern', delivery_donation_path, data: { confirm: 'Sicher?' }, class: 'btn btn-danger'
 
   %table
     %thead
