--- a/app/views/donators/new.html.haml
+++ b/app/views/donators/new.html.haml
@@ -15,7 +15,7 @@ Waren sie bereits früher schon einmal spender?
         #{a.text_field :city}
         #{a.text_field :plz}
         #{a.text_field :phone}
-      = f.fields_for 'donations_attributes[]', @donation do |d|
+      = f.fields_for :donations_attributes, @donation do |d|
         #{d.text_field :food}
         #{d.number_field :amount}
         #{d.text_field :unit}
