--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -41,6 +41,11 @@ background-color: #d4f2ca;
   li {
     list-style: none;
   }
+  max-width: 300px;
+}
+
+.deliverydate-form {
+  max-width: 300px;
 }
 
 // Organization
