--- a/app/views/donations/transport.html.haml
+++ b/app/views/donations/transport.html.haml
@@ -22,7 +22,12 @@
       Teilmenge ->
       = s.amount
       = @donation.unit
-  - if @donation.confirmed?
-    .btn.btn-success Transport bestätigt!
-  - else
-    =button_to 'Transport bestätigen', confirm_transport_donation_path, data: { confirm: 'Sicher?' }, class: 'btn btn-info'
+  .deliverydate-form
+    = bootstrap_form_for @donation do |f|
+      = f.text_field :delivery_date
+      = f.submit 'Lieferdatum einstellen', class: 'btn btn-info'
+
+    - if @donation.confirmed?
+      .btn.btn-success Transport bestätigt!
+    - else
+      =button_to 'Transport bestätigen', confirm_transport_donation_path, data: { confirm: 'Sicher?' }, class: 'btn btn-info'
