--- a/app/views/shares/edit.html.haml
+++ b/app/views/shares/edit.html.haml
@@ -2,9 +2,7 @@
 
 Bitte gebe ein Datum für die Selbstabholung an
 
-= form_for [@donation, @share], url: pickup_donation_share_path do |f|
-  = f.label :amount
+= bootstrap_form_for [@donation, @share], url: pickup_donation_share_path do |f|
   = f.number_field :amount
-  = f.label :pick_up_date
-  = f.text_field :pick_up_date
+  = f.date_select :pick_up_date
   = f.submit "Selbstabholung einreichen"
