--- a/app/views/transporter_mailer/transport_confirmed_mail.html.haml
+++ b/app/views/transporter_mailer/transport_confirmed_mail.html.haml
@@ -1,14 +1,30 @@
-Hallo #{@transporter.name}
+Hallo #{@transporter.name},
 %br/
 Sie haben den Transport folgender Spende am #{@donation.delivery_date} bestätigt:
 %br/
-= @donation.food
-= @donation.amount
-= @donation.unit
+%br/
+#{@donation.food}
+%br/
+#{@donation.amount}
+%br/
+#{@donation.unit}
+%br/
 %br/
 von: #{@donator.name}
 %br/
+Email: #{@donator.email}
+%br/
+Adresse
+%br/
+#{@donator.address.street} #{@donator.address.house_number}
+%br/
+#{@donator.address.city}
+%br/
+#{@donator.address.phone}
+%br/
 Die Spende muss an folgende Organisationen geliefert werden:
+%br/
+%br/
 - @shares.each do |s|
   = s.organization.name
   %br/
