--- a/app/views/transporter_mailer/transporter_email.html.haml
+++ b/app/views/transporter_mailer/transporter_email.html.haml
@@ -1,23 +1,47 @@
 Transportunternehmer!
-= @transporter.name
-
+#{@transporter.name}
+%br/
 Es wurde ein Transport für eine Spende an folgende Tafeln angefordert:
-
+%br/
+%br/
 - @shares.each do |o|
   = o.organization.name
+  %br/
   = o.organization.address.street
+  %br/
   = o.organization.address.house_number
+  %br/
   = o.organization.address.city
+  %br/
   = o.organization.address.plz
-
+  %br/
+%br/
 
 Bei der Spende handelt es sich um:
-= @donation.food
-Menge:
-= @donation.amount
-= @donation.unit
+%br/
+Die Spende beinhaltet:
+%br/
+%br/
+Essen: #{@donation.food}
+%br/
+Menge: #{@donation.amount} #{@donation.unit}
+%br/
 
 von: #{@donator.name}
+%br/
+Email: #{@donator.email}
+%br/
+Adresse
+%br/
+#{@donator.address.street} #{@donator.address.house_number}
+%br/
+#{@donator.address.city}
+%br/
+#{@donator.address.phone}
+%br/
+Die Spende muss an folgende Organisationen geliefert werden:
+%br/
+%br/
 
 Zur Spende gehen:
 = link_to "Zur Spende", @url
