--- a/app/views/donations/new.html.haml
+++ b/app/views/donations/new.html.haml
@@ -6,3 +6,5 @@
   #{f.date_select :expiry_date}
   %li
     = f.submit "Spende einstellen", class: "btn btn-success"
+
+= link_to "Back", donator_donations_path(@donator)
