--- a/app/views/donators/index.html.haml
+++ b/app/views/donators/index.html.haml
@@ -10,4 +10,4 @@
       #{donations.food}
       #{donations.amount}
       #{donations.unit}
-      = link_to 'zur Spende', donator_donations_path(donator)
+      = link_to 'zur Spende', donation_path(donations)
