--- a/app/views/donators/login.html.haml
+++ b/app/views/donators/login.html.haml
@@ -3,3 +3,5 @@ Bitte Trage deine Email ein
   = f.label :email
   = f.email_field :email
   = f.submit "Login"
+
+= link_to "Back", new_donator_path
