--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -8,3 +8,5 @@
   = f.check_box :admin
   = f.collection_radio_buttons(:organization_id, Organization.all, :id, :name)
   = f.submit 'Erstellen'
+
+= link_to "Back", users_path
