--- a/app/views/donators/ordered.html.haml
+++ b/app/views/donators/ordered.html.haml
@@ -1,15 +1,12 @@
-|
-= link_to 'Userliste', users_path
-
 .container-fluid.donations
-  %h1 Spendenübersicht
+  %h1 Bestellte Donation
   %ul
   - @donator.each do |donator|
     %li #{donator.name}
-    - donator.open_donation.each do |donations|
+    - donator.ordered_donation.each do |donations|
       #{donations.food}
       #{donations.amount}
       #{donations.unit}
       = link_to 'zur Spende', donation_path(donations)
 
-= link_to "Bestellte Spenden", ordered_path
+= link_to "Back", donators_path
