--- a/app/views/donators/new.html.haml
+++ b/app/views/donators/new.html.haml
@@ -9,7 +9,7 @@ Waren sie bereits früher schon einmal spender?
         = f.text_field :name
       %li
         = f.text_field :email
-      = f.fields_for :address_attributes do |a|
+      = f.fields_for :address_attributes, @address do |a|
         #{a.text_field :street}
         #{a.text_field :house_number}
         #{a.text_field :city}
