--- a/app/views/organizations/new.html.haml
+++ b/app/views/organizations/new.html.haml
@@ -6,7 +6,7 @@
         = f.text_field :name
       %li
         = f.email_field :email
-      = f.fields_for :address_attributes do |a|
+      = f.fields_for :address_attributes, @address do |a|
         #{a.text_field :street}
         #{a.text_field :house_number}
         #{a.text_field :city}
