--- a/app/views/donations/show.html.haml
+++ b/app/views/donations/show.html.haml
@@ -53,9 +53,9 @@
 
     - if @share_organization != nil
       - if current_user.present? && current_user.admin? && @share_organization.pick_up == false
-        =button_to 'Anfordern', delivery_donation_path, data: { confirm: 'Sicher?' }, class: 'btn btn-danger'
+        =button_to 'Anfordern', delivery_donation_path, class: 'btn btn-danger'
       - elsif @share_organization.pick_up_date == nil
-        =link_to 'Selbstabholen', edit_donation_share_path(@donation, @share_organization), data: { confirm: 'Sicher?' }, class: 'btn btn-info'
+        =link_to 'Selbstabholen', edit_donation_share_path(@donation, @share_organization), class: 'btn btn-info'
   %table
     %thead
       %tr
