--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,7 +1,7 @@
 %h1 Neuen Mitarbeiter erstellen
 = form_for @user do |f|
-  = f.label :name
-  = f.text_field :name
+  = f.label :names
+  = f.text_field :name, :maxlength => 25
   = f.label :email
   = f.email_field :email
   = f.label :admin
