--- a/app/views/donator_mailer/transport_confirmed_mail.html.haml
+++ b/app/views/donator_mailer/transport_confirmed_mail.html.haml
@@ -3,7 +3,7 @@ Hallo #{@donator.name}
 #{@transporter.name} hat den Transport folgender Spende am #{@donation.delivery_date} bestätigt:
 %br/
 = @donation.food
-= @donation.amount
+= @shares_amount
 = @donation.unit
 %br/
 Die Spende wird an folgende Organisationen geliefert:
