add first and last name

--- a/app/views/user_mailer/activation_needed_email.html.haml
+++ b/app/views/user_mailer/activation_needed_email.html.haml
@@ -1,11 +1,11 @@
-Hallo #{@user.name},
+Hallo #{@user.first_name} #{@user.last_name},
 %br/
 es wurde für sie ein Account bei der Tafel #{@organization.name} angelegt.
 %br/
 Ihr Daten sind folgende:
 %br/
 %br/
-Accountname: #{@user.name}
+Accountname: #{@user.first_name} #{@user.last_name}
 %br/
 EMail: #{@user.email}
 %br/
