--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -8,16 +8,20 @@
   = link_to "Meine Mitarbeiter", organization_members_user_path(current_user)
 - @user.each do |u|
   - if current_user.is_admin?
+    %h3 Vorname:
+    = u.first_name
     %h3 Name:
-    = u.name
+    = u.last_name
     %h3 Email:
     = u.email
     %br/
     = link_to "Mitarbeiter bearbeiten", edit_user_path(u)
 
   - else
+    %h3 Vorname:
+    = u.first_name
     %h3 Name:
-    = u.name
+    = u.last_name
     %h3 Email:
     = u.email
 
