--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,7 +1,9 @@
 %h1 Neuen Mitarbeiter erstellen
 = form_for @user do |f|
-  = f.label :names
-  = f.text_field :name, :maxlength => 25
+  = f.label :first_name
+  = f.text_field :first_name, :maxlength => 25
+  = f.label :last_name
+  = f.text_field :last_name, :maxlength => 25
   = f.label :email
   = f.email_field :email
   = f.label :admin
