--- a/app/views/donations/show.html.haml
+++ b/app/views/donations/show.html.haml
@@ -53,10 +53,11 @@
 
     - if @share_organization != nil
       - if current_user.present? && current_user.admin? && @share_organization.pick_up == false
-        %button.btn.btn-info{"data-target" => "#transport-confirmation-modal", "data-toggle" => "modal", :type => "button"} Transport anfordern
+        -# %button.btn.btn-info{"data-target" => "#transport-confirmation-modal", "data-toggle" => "modal", :type => "button"} Transport anfordern
+        = button_to 'anfordern', delivery_donation_path , class: 'btn btn-info'
       - elsif @share_organization.pick_up_date == nil
-        %button.btn.btn-info{"data-target" => "#pickup-confirmation-modal", "data-toggle" => "modal", :type => "button"} Selbstabholung
-
+        -# %button.btn.btn-info{"data-target" => "#pickup-confirmation-modal", "data-toggle" => "modal", :type => "button"} Selbstabholung
+        = link_to 'PICK UP', edit_donation_share_path(@donation, @share_organization) , class: 'btn btn-info'
   %table
     %thead
       %tr
